--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ Mako==1.2.0
 MarkupSafe==2.1.0
 pydantic==1.9.0
 sniffio==1.2.0
+psycopg2-binary
 SQLAlchemy==1.4.32
 starlette==0.17.1
+uvicorn
 typing_extensions==4.1.1
 zipp==3.7.0
