--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "Belal",
         "Fadwa",
+        "haya",
+        "hayaupdated",
         "Leena",
         "Maka",
         "Mousa",
